DBX2006/Dbxsrc/Common/Dbx32.h

 DbxContext;
 TCoord;
 TArc;
 TAttribute;
 TBus;
 TClassToClass;
 TComponent;
 TCompGraphic;
 TDesign;
 TField;
 TLayer;
 TLine;
 TNet;
 TNetClass;
 TPad;
 TPin;
 TPoint;
 TPort;
 TSymbol;
 TText;
 TVia;
 TWire;
 TTable;
 TMetaFile;
 TDiagram;
 TDetail;
TItem;
long 
DLLX TDeleteArc (DbxContext* pContext,          
                 TArc*       pTArc);            
long 
DLLX TDeleteAttribute(DbxContext* pContext,     
                      TAttribute* pTAttr);      
long 
DLLX TDeleteBus      (DbxContext* pContext,     
                      TBus*       pTBus);       
long 
DLLX TDeleteClassToClass (DbxContext*     pContext,         
                          TClassToClass*  pTClassToClass);  
long 
DLLX TDeleteClassToClassAttribute  (DbxContext* pContext,        
                                    long        netClassId1,     
                                    long        netClassId2,     
                                    TAttribute* TAttribute);     
long 
DLLX TDeleteClassToClassLayerRule(DbxContext* pContext,     
                                  long        netclassId1,  
                                  long        netclassId2,  
                            const char*       layerName,    
                                  TAttribute* pAttr);       
long 
DLLX TDeleteCompAttribute  (DbxContext* pContext,       
                                  char* pCompRefDes,    
                            TAttribute* TAttribute);    
long 
DLLX TDeleteComponent(DbxContext* pContext,     
                    TComponent* pTComponent);   
long
DLLX TDeleteDetail(DbxContext* pContext,    
                   TDetail*    pTDetail);   
long  
DLLX  TDeleteDesignAttribute     (DbxContext* pContext,     
                                  TAttribute* pTAttr);      
long
DLLX TDeleteDiagram(DbxContext* pContext,   
                     TDiagram*   pTDiagram);    
long 
DLLX TDeleteField  (DbxContext* pContext,     
                    TField*     pTField);     
long  
DLLX  TDeleteIncludedRoomComponent (DbxContext* pContext,        
                                    long        roomId,          
                                    TComponent* pTComponent);    
long 
DLLX TDeleteItem(DbxContext* pContext,     
                 TItem*      pTItem);      
long  
DLLX  TDeleteLayerAttribute     (DbxContext* pContext,     
                                 long        layerId,      
                                 TAttribute* pTAttr);      
long 
DLLX TDeleteLine(DbxContext* pContext,     
                 TLine*      pTLine);      
long 
DLLX TDeleteMetaFile(DbxContext* pContext,    
                     TMetaFile*  pTMetaFile); 
long 
DLLX TDeleteNet (DbxContext* pContext,     
                 TNet*       pTNet);       
long 
DLLX TDeleteNetAttribute  (DbxContext* pContext,       
                           long        netId,          
                           TAttribute* TAttribute);    
long 
DLLX TDeleteNetClass (DbxContext* pContext,
                   TNetClass*  pTNetClass);
long 
DLLX TDeleteNetClassAttribute  (DbxContext* pContext,       
                                long        netClassId,     
                                TAttribute* TAttribute);    
long 
DLLX TDeleteNetClassLayerRule(DbxContext* pContext,   
                              long        netClassId, 
                        const char*       layerName,  
                              TAttribute* pAttr);     
long 
DLLX TDeleteNetClassNet  (DbxContext* pContext,       
                          long        netClassId,     
                          TNet*       pTNet);         
long 
DLLX TDeleteNetLayerRule(DbxContext* pContext,   
                         long        netId,      
                   const char*       layerName,  
                         TAttribute* pAttr);     
long 
DLLX TDeleteNetNode       (DbxContext* pContext,       
                           long        netId,          
                           TItem*      pTItem);        
long 
DLLX TDeletePad (DbxContext* pContext,     
                 TPad*       pTPad);       
long 
DLLX TDeletePin (DbxContext* pContext,     
                 TPin*       pTPin);       
long 
DLLX TDeletePoint(DbxContext* pContext,    
                  TPoint*     pTPoint);    
long 
DLLX TDeletePort (DbxContext* pContext,    
                  TPort*      pTPort);     
long  
DLLX  TDeleteRoomAttribute  (DbxContext* pContext, 
                             long        roomId,   
                             TAttribute* pTAttr);  
long 
DLLX TDeleteSymbol (DbxContext* pContext,    
                    TSymbol*    pTSymbol);   
long
DLLX TDeleteTable(DbxContext* pContext,     
                  TTable*     pTTable);     
long 
DLLX TDeleteText(DbxContext* pContext,     
                 TText*      pTText);      
long 
DLLX TDeleteVia (DbxContext* pContext,     
                 TVia*       pTVia);       
long 
DLLX TDeleteWire(DbxContext* pContext,     
                 TWire*      pTWire);      
long
DLLX TDeselectPrintJob (DbxContext * pContext,      
                        const char * pJobName);     
long 
DLLX TFlipArc      (DbxContext* pContext,     
                    TCoord*     pTCoord,      
                    TArc*       pTArc);       
long 
DLLX TFlipAttribute(DbxContext* pContext,     
                    TCoord*     pTCoord,      
                    TAttribute* pTAttr);      
long 
DLLX TFlipBus      (DbxContext* pContext,     
                    TCoord*     pTCoord,      
                    TBus*       pTBus);       
long 
DLLX TFlipComponent(DbxContext* pContext,     
                    TCoord*     pTCoord,      
                    TComponent* pTComponent); 
long 
DLLX TFlipField    (DbxContext* pContext,     
                    TCoord*     pTCoord,      
                    TField*     pTField);     
long 
DLLX TFlipItem     (DbxContext* pContext,     
                    TCoord*     pTCoord,      
                    TItem*      pTItem);      
long 
DLLX TFlipLine     (DbxContext* pContext,     
                    TCoord*     pTCoord,      
                    TLine*      pTLine);      
long 
DLLX TFlipPad      (DbxContext* pContext,     
                    TCoord*     pTCoord,      
                    TPad*       pTPad);       
long 
DLLX TFlipPin      (DbxContext* pContext,     
                    TCoord*     pTCoord,      
                    TPin*       pTPin);       
long 
DLLX TFlipPoint    (DbxContext* pContext,     
                    TCoord*     pTCoord,      
                    TPoint*     pTPoint);     
long 
DLLX TFlipPort     (DbxContext* pContext,     
                    TCoord*     pTCoord,      
                    TPort*      pTPort);      
long 
DLLX TFlipSymbol   (DbxContext* pContext,     
                    TCoord*     pTCoord,      
                    TSymbol*    pTSymbol);    
long
DLLX TFlipTable    (DbxContext* pContext,     
                    TCoord*     pTCoord,      
                    TTable*     pTTable);     
long 
DLLX TFlipText     (DbxContext* pContext,     
                    TCoord*     pTCoord,      
                    TText*      pTText);      
long 
DLLX TFlipVia      (DbxContext* pContext,     
                    TCoord*     pTCoord,      
                    TVia*       pTVia);       
long 
DLLX TFlipWire     (DbxContext* pContext,     
                    TCoord*     pTCoord,      
                    TWire*      pTWire);      
long 
DLLX TGetClassToClassById(DbxContext* pContext,         
                      long netClassId1,                 
                      long netClassId2,                 
                      TClassToClass* pClassToClass);    
long 
DLLX TGetCompByRefDes(DbxContext* pContext, 
                      const char* pCompRefDes, 
                      TComponent* pComponent);
long 
DLLX TGetCompByType  (DbxContext* pContext, 
                      const char* pCompType, 
                      TComponent* pComponent);
long 
DLLX TGetCompSymbolByPartNumber (DbxContext* pContext, 
                                 const char* pRefDes, 
                                 long        partNumber,
                                 TSymbol*    pTSymbol);
long 
DLLX TGetCompSymbolByRefDes (DbxContext* pContext, 
                             const char* pSymRefDes, 
                             TSymbol*    pTSymbol);
long 
DLLX TGetDesignInfo(DbxContext* pContext, 
                    TDesign* pDesignInfo);
long 
DLLX TGetFirstBusNet  (DbxContext* pContext, 
                       const char* pBusName, 
                       TNet*       pTNet);
long 
DLLX TGetFirstClassToClass(DbxContext* pContext, 
                           TClassToClass* pTClassToClass);
long 
DLLX TGetFirstClassToClassAttribute(DbxContext* pContext,       
                                    long        netClassId1,    
                                    long        netClassId2,    
                                    TAttribute* TAttribute);    
long 
DLLX TGetFirstClassToClassLayerRule(DbxContext* pContext,       
                                    long        netClassId1,    
                                    long        netClassId2,    
                              const char*       layerName,      
                                    TAttribute* pAttr);         
long 
DLLX TGetFirstClassToClassLayerRuleLayerName(DbxContext* pContext,       
                                             long        netClassId1,    
                                             long        netClassId2,    
                                             TLayer*     pLayer);        
long 
DLLX TGetFirstCompGraphic(DbxContext* pContext,             
                          const char* pCompRefDes,          
                          TCompGraphic *pTCompGraphic);     
long 
DLLX TGetNextCompGraphic(DbxContext* pContext,         
                         TCompGraphic *pTCompGraphic); 
long 
DLLX TGetCompGraphicByOrientation(DbxContext* pContext,
                                  const char* pCompRefDes,
                                  long orientation,
                                  TCompGraphic *pTCompGraphic);
long 
DLLX TGetFirstCompGraphicPad(DbxContext* pContext,
                             const char* pCompRefDes,
                             const char* pCompGraphicName,
                             TPad *pCompPad);
long 
DLLX TGetNextCompGraphicPad(DbxContext* pContext,
                            TPad *pCompPad);
long 
DLLX TGetFirstCompGraphicAttribute(DbxContext* pContext,         
                                   const char* pCompRefDes,      
                                   const char* pCompGraphicName, 
                                   TAttribute* pTAttr);          
long 
DLLX TGetNextCompGraphicAttribute(DbxContext* pContext, 
                                  TAttribute* pTAttr);  
long 
DLLX TGetFirstCompGraphicItem(DbxContext* pContext,
                              const char* pCompRefDes,
                              const char* pCompGraphicName,
                              TItem* pCompItem);
long 
DLLX TGetNextCompGraphicItem(DbxContext* pContext,
                             TItem* pCompItem);
long 
DLLX TGetFirstCompAttribute(DbxContext* pContext,      
                            const char* pCompRefDes,   
                            TAttribute* TAttribute);   