DBX2006/Dbxsrc/Common/dbx32.BAS


Declare Function TDeleteArc Lib "dbx32.dll" (Context As DbxContext, deleteItem As TArc) As Long
Declare Function TDeleteAttribute Lib "dbx32.dll" (Context As DbxContext, deleteItem As TAttribute) As Long
Declare Function TDeleteBus Lib "dbx32.dll" (Context As DbxContext, deleteItem As TBus) As Long
Declare Function TDeleteClassToClass Lib "dbx32.dll" (Context As DbxContext, deleteItem As TClassToClass) As Long
Declare Function TDeleteClassToClassAttribute Lib "dbx32.dll" (Context As DbxContext, ByVal netClassId1 As Long, ByVal netClassId2 As Long, classToClassAttribute As TAttribute) As Long
Declare Function TDeleteClassToClassLayerRule Lib "dbx32.dll" (Context As DbxContext, ByVal netClassId1 As Long, ByVal netClassId2 As Long, ByVal layerName As String, pAttr As TAttribute) As Long
Declare Function TDeleteCompAttribute Lib "dbx32.dll" (Context As DbxContext, ByVal compRefDes As String, compAttribute As TAttribute) As Long
Declare Function TDeleteComponent Lib "dbx32.dll" (Context As DbxContext, deleteItem As TComponent) As Long
Declare Function TDeleteDetail Lib "dbx32.dll" (Context As DbxContext, deleteItem As TDetail) As Long  
Declare Function TDeleteDesignAttribute Lib "dbx32.dll" (Context As DbxContext, designAttr As TAttribute) As Long
Declare Function TDeleteDiagram Lib "dbx32.dll" (Context As DbxContext, deleteItem As TDiagram) As Long  
Declare Function TDeleteField Lib "dbx32.dll" (Context As DbxContext, deleteItem As TField) As Long
Declare Function TDeleteIncludedRoomComponent Lib "dbx32.dll" (Context As DbxContext, ByVal roomId As Long, component As TComponent) As Long
Declare Function TDeleteItem Lib "dbx32.dll" (Context As DbxContext, deleteItem As TItem) As Long
Declare Function TDeleteLayerAttribute Lib "dbx32.dll" (Context As DbxContext, ByVal layerId As Long, layerAttr As TAttribute) As Long
Declare Function TDeleteLine Lib "dbx32.dll" (Context As DbxContext, deleteItem As TLine) As Long
Declare Function TDeleteMetaFile Lib "dbx32.dll" (Context As DbxContext, deleteItem As TMetaFile) As Long  
Declare Function TDeleteNet Lib "dbx32.dll" (Context As DbxContext, deleteItem As TNet) As Long
Declare Function TDeleteNetAttribute Lib "dbx32.dll" (Context As DbxContext, ByVal netId As Long, netAttribute As TAttribute) As Long
Declare Function TDeleteNetClass Lib "dbx32.dll" (Context As DbxContext, deleteItem As TNetClass) As Long
Declare Function TDeleteNetClassAttribute Lib "dbx32.dll" (Context As DbxContext, ByVal netClassId As Long, netClassAttribute As TAttribute) As Long
Declare Function TDeleteNetClassLayerRule Lib "dbx32.dll" (Context As DbxContext, ByVal netClassId As Long, ByVal layerName As String, pAttr As TAttribute) As Long
Declare Function TDeleteNetClassNet Lib "dbx32.dll" (Context As DbxContext, ByVal netClassId As Long, net As TNet) As Long
Declare Function TDeleteNetLayerRule Lib "dbx32.dll" (Context As DbxContext, ByVal netId As Long, ByVal layerName As String, pAttr As TAttribute) As Long
Declare Function TDeleteNetNode Lib "dbx32.dll" (Context As DbxContext, ByVal netId As Long, netNode As TItem) As Long
Declare Function TDeletePad Lib "dbx32.dll" (Context As DbxContext, deleteItem As TPad) As Long
Declare Function TDeletePin Lib "dbx32.dll" (Context As DbxContext, deleteItem As TPin) As Long
Declare Function TDeletePoint Lib "dbx32.dll" (Context As DbxContext, deleteItem As TPoint) As Long
Declare Function TDeletePort Lib "dbx32.dll" (Context As DbxContext, deleteItem As TPort) As Long
Declare Function TDeleteRoomAttribute Lib "dbx32.dll" (Context As DbxContext, ByVal roomId As Long, roomAttr As TAttribute) As Long
Declare Function TDeleteSymbol Lib "dbx32.dll" (Context As DbxContext, deleteItem As TSymbol) As Long
Declare Function TDeleteTable Lib "dbx32.dll" (Context As DbxContext, deleteItem As TTable) As Long  
Declare Function TDeleteText Lib "dbx32.dll" (Context As DbxContext, deleteItem As TText) As Long
Declare Function TDeleteVia Lib "dbx32.dll" (Context As DbxContext, deleteItem As TVia) As Long
Declare Function TDeleteWire Lib "dbx32.dll" (Context As DbxContext, deleteItem As TWire) As Long

Declare Function TDeselectPrintJob Lib "dbx32.dll" (Context As DbxContext, ByVal jobName As String) As Long

Declare Function TFlipArc Lib "dbx32.dll" (Context As DbxContext, flipCoord As TCoord, flipArc As TArc) As Long
Declare Function TFlipAttribute Lib "dbx32.dll" (Context As DbxContext, flipCoord As TCoord, flipAttribute As TAttribute) As Long
Declare Function TFlipBus Lib "dbx32.dll" (Context As DbxContext, flipCoord As TCoord, flipItem As TBus) As Long
Declare Function TFlipComponent Lib "dbx32.dll" (Context As DbxContext, flipCoord As TCoord, flipComponent As TComponent) As Long
Declare Function TFlipField Lib "dbx32.dll" (Context As DbxContext, flipCoord As TCoord, flipField As TField) As Long
Declare Function TFlipItem Lib "dbx32.dll" (Context As DbxContext, flipCoord As TCoord, flipItem As TItem) As Long
Declare Function TFlipLine Lib "dbx32.dll" (Context As DbxContext, flipCoord As TCoord, flipLine As TLine) As Long
Declare Function TFlipPad Lib "dbx32.dll" (Context As DbxContext, flipCoord As TCoord, flipPad As TPad) As Long
Declare Function TFlipPin Lib "dbx32.dll" (Context As DbxContext, flipCoord As TCoord, flipPin As TPin) As Long
Declare Function TFlipPoint Lib "dbx32.dll" (Context As DbxContext, flipCoord As TCoord, flipPoint As TPoint) As Long
Declare Function TFlipPort Lib "dbx32.dll" (Context As DbxContext, flipCoord As TCoord, flipPort As TPort) As Long
Declare Function TFlipSymbol Lib "dbx32.dll" (Context As DbxContext, flipCoord As TCoord, flipSymbol As TSymbol) As Long
Declare Function TFlipTable Lib "dbx32.dll" (Context As DbxContext, flipCoord As TCoord, flipTable As TTable) As Long
Declare Function TFlipText Lib "dbx32.dll" (Context As DbxContext, flipCoord As TCoord, flipText As TText) As Long
Declare Function TFlipVia Lib "dbx32.dll" (Context As DbxContext, flipCoord As TCoord, flipVia As TVia) As Long
Declare Function TFlipWire Lib "dbx32.dll" (Context As DbxContext, flipCoord As TCoord, flipWire As TWire) As Long

Declare Function TGetClassToClassById Lib "dbx32.dll" (Context As DbxContext, ByVal netClassId1 As Long, ByVal netClassId2 As Long, classToClass As TClassToClass) As Long
Declare Function TGetCompByRefDes Lib "dbx32.dll" (Context As DbxContext, ByVal compRefDes As String, component As TComponent) As Long
Declare Function TGetCompByType Lib "dbx32.dll" (Context As DbxContext, ByVal pCompType As String, component As TComponent) As Long
Declare Function TGetCompSymbolByRefDes Lib "dbx32.dll" (Context As DbxContext, ByVal compRefDes As String, symbol As TSymbol) As Long
Declare Function TGetCompSymbolByPartNumber Lib "dbx32.dll" (Context As DbxContext, ByVal compRefDes As String, ByVal partnumber As Long, symbol As TSymbol) As Long
Declare Function TGetDesignInfo Lib "dbx32.dll" (Context As DbxContext, designInfo As TDesign) As Long

Declare Function TGetFirstBusNet Lib "dbx32.dll" (Context As DbxContext, ByVal compRefDes As String, pTNet As TNet) As Long
Declare Function TGetFirstClassToClass Lib "dbx32.dll" (Context As DbxContext, classToClass As TClassToClass) As Long
Declare Function TGetFirstClassToClassAttribute Lib "dbx32.dll" (Context As DbxContext, ByVal netClassId1 As Long, ByVal netClassId2 As Long, classToClassAttribute As TAttribute) As Long
Declare Function TGetFirstClassToClassLayerRule Lib "dbx32.dll" (Context As DbxContext, ByVal netClassId1 As Long, ByVal netClassId2 As Long, ByVal layerName As String, pAttr As TAttribute) As Long
Declare Function TGetFirstClassToClassLayerRuleLayerName Lib "dbx32.dll" (Context As DbxContext, ByVal netClassId1 As Long, ByVal netClassId2 As Long, pLayer As TLayer) As Long
Declare Function TGetFirstCompAttribute Lib "dbx32.dll" (Context As DbxContext, ByVal compRefDes As String, compAttribute As TAttribute) As Long

Declare Function TGetFirstCompGraphic Lib "dbx32.dll" (Context As DbxContext, ByVal compRefDes As String, compGraphic As TCompGraphic) As Long
Declare Function TGetNextCompGraphic Lib "dbx32.dll" (Context As DbxContext, compGraphic As TCompGraphic) As Long
Declare Function TGetCompGraphicByOrientation Lib "dbx32.dll" (Context As DbxContext, ByVal compRefDes As String, ByVal orientation As Long, compGraphic As TCompGraphic) As Long
Declare Function TGetFirstCompGraphicPad Lib "dbx32.dll" (Context As DbxContext, ByVal compRefDes As String, ByVal compGraphicName As String, graphicPad As TPad) As Long
Declare Function TGetFirstCompGraphicAttribute Lib "dbx32.dll" (Context As DbxContext, ByVal compRefDes As String,  ByVal compGraphicName As String, graphicAttribute As TAttribute) As Long
Declare Function TGetFirstCompGraphicItem Lib "dbx32.dll" (Context As DbxContext, ByVal compRefDes As String, ByVal compGraphicName As String, graphicItem As TItem) As Long
Declare Function TGetNextCompGraphicPad Lib "dbx32.dll" (Context As DbxContext, graphicPad As TPad) As Long
Declare Function TGetNextCompGraphicAttribute Lib "dbx32.dll" (Context As DbxContext, graphicAttribute As TAttribute) As Long
Declare Function TGetNextCompGraphicItem Lib "dbx32.dll" (Context As DbxContext, graphicItem As TItem) As Long
